<resources>
    <string name="app_name">GourmetSearchApp</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Settings</string>
    <string name="title_map">Map</string>

    <!--    onboarding       -->
    <string name="text_app_onboarding_title01">レストランが見つかる</string>
    <string name="text_app_onboarding_title02">近くのレストランが見れる</string>
    <string name="text_app_onboarding_title03">お気に入りのレストランを登録</string>
    <string name="text_onboarding_instruction01">周辺のたくさんのレストランの情報を確認しよう。</string>
    <string name="text_onboarding_instruction02">地図を利用して現在地周辺のレストランを確認しよう。</string>
    <string name="text_onboarding_instruction03">お気に入りのレストランをアプリに登録しよう。</string>
    <string name="text_onboarding_button">今すぐ始める</string>

    <!--    Home             -->
    <string name="text_switch_dialog_title">リストを切り替える</string>
    <string name="text_switch_dialog_button1">近くのレストラン</string>
    <string name="text_switch_dialog_button2">お気に入りのレストラン</string>

    <!--    map              -->
    <string name="no_result_near_restaurant">検索条件にあったレストランが見つかりませんでした。</string>
    <string name="no_result_favorite_restaurant">お気に入り登録しているレストランがありません。\n気になるレストランを登録してみましょう！</string>
    <string name="no_location_authorization">アプリの位置情報がオフのため現在地を取得できません。</string>
    <string name="no_locations_title">位置情報がオフになっています。</string>
    <string name="no_locations_message">位置情報がオフになっているため、現在地を取得できません。</string>
    <string name="around_store_count">周辺のレストランが%1$d件見つかりました</string>

    <!--    search filter    -->
    <string name="text_filter_title">検索条件</string>
    <string name="text_filter_range_text">検索範囲</string>
    <string name="text_filter_range_checkbox_1">300m</string>
    <string name="text_filter_range_checkbox_2">500m</string>
    <string name="text_filter_range_checkbox_3">1000m</string>
    <string name="text_filter_range_checkbox_4">2000m</string>
    <string name="text_filter_range_checkbox_5">3000m</string>
    <string name="text_filter_coupon">クーポンあり</string>
    <string name="text_filter_drink">飲み放題あり</string>
    <string name="text_filter_wifi">Wi-Fiあり</string>
    <string name="text_filter_private_room">個室あり</string>
    <string name="text_filter_lunch">ランチあり</string>
    <string name="text_filter_search_button">検索</string>
    <string name="text_filter_reset">リセット</string>
    <string name="text_filter_chip_1">居酒屋</string>
    <string name="text_filter_chip_2">バー</string>
    <string name="text_filter_chip_3">和食</string>
    <string name="text_filter_chip_4">洋食</string>
    <string name="text_filter_chip_5">イタリアン</string>
    <string name="text_filter_chip_6">中華</string>
    <string name="text_filter_chip_7">焼肉</string>
    <string name="text_filter_chip_8">カフェ</string>
    <string name="text_filter_keyword">フリーキーワードで絞り込み</string>
    <string name="text_filter_keyword_hint">入力例：店名、駅名</string>

    <!--    Setting          -->
    <string name="text_cell_title1">アプリの設定</string>
    <string name="text_cell_title2">アプリの使い方</string>
    <string name="text_cell_title3">OSSライセンス</string>

    <!--    WebView          -->
    <string name="text_web_view_title">店舗詳細</string>
    <string name="text_add_favorite">お気に入りに追加しました</string>
    <string name="text_delete_favorite">お気に入りから削除しました</string>

    <!--   Dialog            -->
    <string name="text_dialog_ok">OK</string>
    <string name="text_dialog_cancel">Cancel</string>
    <string name="text_open_app_settings">アプリの設定を開く</string>
    <string name="text_location_permission">設定</string>

    <!--    error message    -->
    <string name="error_message_default"></string>
    <string name="error_message_404">該当するデータが見つかりませんでした。</string>
    <string name="error_message_500">通信にエラーが発生しました。時間をおいて再度ご確認ください。</string>
    <string name="error_offline">ネットワークに接続できません。</string>
    <string name="error_unexpected">予期せぬエラーが発生しました。</string>
    <string name="retry">retry</string>
</resources>
