<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.google.codelab.gourmetsearchapp.viewmodel.SwitchHomeListViewModel" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.home.SwitchHomeListFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/switch_home_list_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/s_spacing"
                android:layout_marginTop="@dimen/m_spacing"
                android:text="@string/text_switch_dialog_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <View
                android:id="@+id/diver"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/m_spacing"
                android:layout_marginTop="@dimen/l_spacing"
                android:layout_marginEnd="@dimen/m_spacing"
                android:background="#BDBCBC"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_home_list_text_view" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/near_store_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/teal_700"
                    android:text="@string/text_switch_dialog_button1" />

                <RadioButton
                    android:id="@+id/favorite_store_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/teal_700"
                    android:text="@string/text_switch_dialog_button2" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/l_spacing"
                    android:onClick="@{v -> viewModel.onClicked()}"
                    android:text="@string/text_filter_search_button" />
            </RadioGroup>
        </LinearLayout>
    </FrameLayout>
</layout>
